--- a/ViewModel/ViewModelDemo3/app/src/main/AndroidManifest.xml
+++ b/ViewModel/ViewModelDemo3/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.anushka.viewmodeldemo2">
+    package="com.anushka.viewmodeldemo3">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ViewModelDemo2">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.anushka.viewmodeldemo3.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
