--- a/ViewModel_LiveData_with_DataBinding/Two_way_databinding_challenge/app/build.gradle
+++ b/ViewModel_LiveData_with_DataBinding/Two_way_databinding_challenge/app/build.gradle
@@ -30,7 +30,8 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    dataBinding{
+
+    dataBinding {
         enabled = true
     }
 }
@@ -39,7 +40,9 @@ dependencies {
     def lifecycle_version = "2.4.0-rc01"
 
     // ViewModel
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
