--- a/Navigation_Architecture_Component/NavDemo1/app/build.gradle
+++ b/Navigation_Architecture_Component/NavDemo1/app/build.gradle
@@ -39,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def nav_version = "2.3.5"
 
     // Kotlin
