--- a/RoomDatabase/app/build.gradle
+++ b/RoomDatabase/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
 
     implementation "androidx.annotation:annotation:1.3.0"
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
