--- a/RoomDatabase/app/build.gradle
+++ b/RoomDatabase/app/build.gradle
@@ -39,6 +39,7 @@ android {
 dependencies {
     def lifecycle_version = "2.5.0-alpha02"
     def arch_version = "2.1.0"
+    def room_version = "2.4.1"
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -55,8 +56,14 @@ dependencies {
     // Annotation processor
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
+    // Kapt
     implementation "androidx.annotation:annotation:1.3.0"
 
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
 
