--- a/RoomDatabase/app/build.gradle
+++ b/RoomDatabase/app/build.gradle
@@ -37,14 +37,13 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.5.0-alpha02"
-    def arch_version = "2.1.0"
+    def lifecycle_version = "2.1.0"
     def room_version = "2.4.1"
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // ViewModel utilities for Compose
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // Lifecycles only (without ViewModel or LiveData)
@@ -58,13 +57,14 @@ dependencies {
 
     // Kapt
     implementation "androidx.annotation:annotation:1.3.0"
-
     // Room
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
 
 
     implementation 'androidx.core:core-ktx:1.7.0'
