--- a/DependencyInjection/app/src/main/AndroidManifest.xml
+++ b/DependencyInjection/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.dependencyinjectiondemo">
 
     <application
+        android:name=".SmartPhoneApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
