Finalizing implementation injection with dagger

--- a/MVVM_CLEAN_CODE_PROJECT_ONE/app/build.gradle
+++ b/MVVM_CLEAN_CODE_PROJECT_ONE/app/build.gradle
@@ -17,6 +17,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String","API_KEY","\"aa7f43ae992ca59ee478383157860f40\""
+        buildConfigField "String","BASE_URL","\"https://api.themoviedb.org/3/\""
     }
 
     buildTypes {
