--- a/Unit-Test-Fundamentals/CircleCalc/app/build.gradle
+++ b/Unit-Test-Fundamentals/CircleCalc/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     // optional - Test helpers for LiveData
     testImplementation("androidx.arch.core:core-testing:2.1.0")
     testImplementation 'org.amshove.kluent:kluent-android:1.68'
+    testImplementation 'org.mockito:mockito-core:4.5.1'
 }
