--- a/MVVM_CLEAN_CODE_PROJECT_ONE/app/build.gradle
+++ b/MVVM_CLEAN_CODE_PROJECT_ONE/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -37,6 +38,9 @@ android {
     buildFeatures {
         viewBinding = true
         dataBinding = true
+    }
+    kapt {
+        correctErrorTypes true
     }
 }
 
@@ -104,6 +108,10 @@ dependencies {
     //Dagger2
     implementation 'com.google.dagger:dagger:2.42'
     kapt 'com.google.dagger:dagger-compiler:2.42'
+
+    //Hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
