--- a/MVVM_CLEAN_CODE_PROJECT_ONE/app/build.gradle
+++ b/MVVM_CLEAN_CODE_PROJECT_ONE/app/build.gradle
@@ -34,6 +34,10 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+
+        freeCompilerArgs += [
+                "-Xjvm-default=all",
+        ]
     }
     buildFeatures {
         viewBinding = true
