Reconhecendo e implementando data models

--- a/MVVM_CLEAN_CODE_PROJECT_TWO/app/build.gradle
+++ b/MVVM_CLEAN_CODE_PROJECT_TWO/app/build.gradle
@@ -18,9 +18,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "String","API_KEY","\"aa7f43ae992ca59ee478383157860f40\""
-        buildConfigField "String","BASE_URL","\"https://api.themoviedb.org/3/\""
-        buildConfigField "String","LANGUAGE","\"pt-BR\""
+        buildConfigField "String","API_KEY","\"ff099fc070bb4d70bb279d3cade0034c\""
+//        buildConfigField "String","BASE_URL","\"https://api.themoviedb.org/3/\""
+//        buildConfigField "String","LANGUAGE","\"pt-BR\""
     }
 
     buildTypes {
