Implementando camada de serviço retrofit e remote datasources

--- a/MVVM_CLEAN_CODE_PROJECT_TWO/app/build.gradle
+++ b/MVVM_CLEAN_CODE_PROJECT_TWO/app/build.gradle
@@ -19,7 +19,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String","API_KEY","\"ff099fc070bb4d70bb279d3cade0034c\""
-//        buildConfigField "String","BASE_URL","\"https://api.themoviedb.org/3/\""
+        buildConfigField "String","BASE_URL","\"https://newsapi.org\""
 //        buildConfigField "String","LANGUAGE","\"pt-BR\""
     }
 
