--- a/MVVM_CLEAN_CODE_PROJECT_TWO/app/build.gradle
+++ b/MVVM_CLEAN_CODE_PROJECT_TWO/app/build.gradle
@@ -20,7 +20,6 @@ android {
 
         buildConfigField "String","API_KEY","\"ff099fc070bb4d70bb279d3cade0034c\""
         buildConfigField "String","BASE_URL","\"https://newsapi.org\""
-//        buildConfigField "String","LANGUAGE","\"pt-BR\""
     }
 
     buildTypes {
@@ -122,5 +121,9 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     kapt 'com.github.bumptech.glide:compiler:4.13.0'
+
+    // Test
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.10.0")
+    testImplementation 'org.amshove.kluent:kluent-android:1.68'
 }
 
