--- a/MVVM_CLEAN_CODE_PROJECT_ONE/app/build.gradle
+++ b/MVVM_CLEAN_CODE_PROJECT_ONE/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.6'
 
     implementation 'androidx.work:work-runtime-ktx:2.7.0'
 
@@ -116,6 +117,7 @@ dependencies {
     //Hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
