--- a/MVVM_CLEAN_CODE_PROJECT_TWO/app/build.gradle
+++ b/MVVM_CLEAN_CODE_PROJECT_TWO/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'androidx.work:work-runtime-ktx:2.7.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.6'
 
     // WorkManager
     def work_version = "2.7.1"
