--- a/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/AndroidManifest.xml
+++ b/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/AndroidManifest.xml
@@ -4,11 +4,12 @@
     
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:name=".presentation.NewsApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
