Implementando tela de overview de cada item

--- a/Jetpack-Compose-Fundamentals/ComposeRecyclerView/app/src/main/AndroidManifest.xml
+++ b/Jetpack-Compose-Fundamentals/ComposeRecyclerView/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:theme="@style/Theme.ComposeRecyclerView"
         tools:targetApi="31">
         <activity
+            android:name=".InfoActivity"
+            android:exported="false"
+            android:label="@string/title_activity_info"
+            android:theme="@style/Theme.ComposeRecyclerView" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
