--- a/Jetpack-Compose-Fundamentals/FlowDemo/app/build.gradle
+++ b/Jetpack-Compose-Fundamentals/FlowDemo/app/build.gradle
@@ -47,6 +47,16 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.5.0-alpha02"
+    def arch_version = "2.1.0"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // ViewModel utilities for Compose
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
