--- a/MVVM_CLEAN_CODE_COMPOSE_PROJECT_THREE/app/build.gradle
+++ b/MVVM_CLEAN_CODE_COMPOSE_PROJECT_THREE/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.compose.material:material:$compose_ui_version"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
