--- a/MVVM_CLEAN_CODE_COMPOSE_PROJECT_THREE/app/build.gradle
+++ b/MVVM_CLEAN_CODE_COMPOSE_PROJECT_THREE/app/build.gradle
@@ -61,4 +61,9 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    def room_version = "2.5.1"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
