--- a/MVVM_CLEAN_CODE_COMPOSE_PROJECT_THREE/app/build.gradle
+++ b/MVVM_CLEAN_CODE_COMPOSE_PROJECT_THREE/app/build.gradle
@@ -67,11 +67,20 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
+    // Room
     def room_version = "2.5.1"
-
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
+    //Hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
+    // Annotation processor
+    kapt "androidx.lifecycle:lifecycle-compiler:2.6.1"
+
+    // Kapt
+    implementation "androidx.annotation:annotation:1.6.0"
 }
